// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a styled component with custom props 1`] = `
<Text
  numberOfLines={1}
  style={
    {
      "color": "blue",
    }
  }
/>
`;

exports[`creates a styled component with dynamic props 1`] = `
<Text
  numberOfLines={3}
  style={
    {
      "color": "red",
    }
  }
/>
`;

exports[`creates a styled component with dynamic props 2`] = `
<Text
  numberOfLines={1}
  oneLiner={true}
  style={
    {
      "color": "red",
    }
  }
/>
`;
